made headers more accessible

--- a/404.html
+++ b/404.html
@@ -1,43 +1,36 @@
+
 <!DOCTYPE html>
 <html>
     <head>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-        <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@900&display=swap&text=underconstructionhpag'xwy." rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@450;700&display=swap" rel="stylesheet">
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
-        <title>nowhere</title><style>
-            pre{font-family: 'Inconsolata', monospace; font-size:1.5rem;
-            margin: 3px; padding: 0 1.5rem ; line-height: 1.35rem; width:fit-content; height: fit-content}
-            .board{border: solid #f0f0f0 3px; margin:1.5rem 1.5rem 13px; padding: 1.5rem}
-            body{background-color: #040404;
-                color: #f0f0f0; margin: 0;}
-            a{color: #f0f0f0; text-decoration: underline 2px #4040ff; transition: all .5s cubic-bezier(.08,.82,.17,1)}
-            a:hover{color: #4040ff}
+        <title>404</title><style>
+            body{background-color: #080808;color: #f0f0f0; font-family: 'Work Sans', sans-serif}
+            .main{display: flex;
+                column-gap: 30px;
+                align-items: center;
+                position: absolute;
+                bottom: 50%; left: 50%;
+                transform: translate(-50%, 50%);
+                padding: 16px 24px;
+                border: solid #f0f0f0 2px;
+                border-radius: 30px;}
+            a{font-weight: bold; color: #f0f0f0}
+            a:hover{color: #080808; background-color: #f0f0f0; text-decoration-color: #f0f0f0;}
         </style></head>
 
-    <body><pre class="board">
-under construction
-<span style="color: hsl(0, 0%, 100%, calc(17 / 18))">nder construction</span> <span style="color: hsl(0, 0%, 100%, calc(1 / 18))">u
-<span style="color: hsl(0, 0%, 100%, calc(16 / 18))">der construction</span> <span style="color: hsl(0, 0%, 100%, calc(2 / 18))">un
-<span style="color: hsl(0, 0%, 100%, calc(15 / 18))">er construction</span> <span style="color: hsl(0, 0%, 100%, calc(3 / 18))">und
-<span style="color: hsl(0, 0%, 100%, calc(14 / 18))">r construction</span> <span style="color: hsl(0, 0%, 100%, calc(4 / 18))">unde
-<span style="color: hsl(0, 0%, 100%, calc(13 / 18))"> construction</span> <span style="color: hsl(0, 0%, 100%, calc(5 / 18))">under
-<span style="color: hsl(0, 0%, 100%, calc(12 / 18))">construction</span> <span style="color: hsl(0, 0%, 100%, calc(6 / 18))">under 
-<span style="color: hsl(0, 0%, 100%, calc(11 / 18))">onstruction</span> <span style="color: hsl(0, 0%, 100%, calc(7 / 18))">under c
-<span style="color: hsl(0, 0%, 100%, calc(10 / 18))">nstruction</span> <span style="color: hsl(0, 0%, 100%, calc(8 / 18))">under co
-<span style="color: hsl(0, 0%, 100%, calc(9 / 18))">struction</span> <span style="color: hsl(0, 0%, 100%, calc(9 / 18))">under con
-<span style="color: hsl(0, 0%, 100%, calc(8 / 18))">truction</span> <span style="color: hsl(0, 0%, 100%, calc(10 / 18))">under cons
-<span style="color: hsl(0, 0%, 100%, calc(7 / 18))">ruction</span> <span style="color: hsl(0, 0%, 100%, calc(11 / 18))">under const
-<span style="color: hsl(0, 0%, 100%, calc(6 / 18))">uction</span> <span style="color: hsl(0, 0%, 100%, calc(12 / 18))">under constr
-<span style="color: hsl(0, 0%, 100%, calc(5 / 18))">ction</span> <span style="color: hsl(0, 0%, 100%, calc(13 / 18))">under constru
-<span style="color: hsl(0, 0%, 100%, calc(4 / 18))">tion</span> <span style="color: hsl(0, 0%, 100%, calc(14 / 18))">under construc
-<span style="color: hsl(0, 0%, 100%, calc(3 / 18))">ion</span> <span style="color: hsl(0, 0%, 100%, calc(15 / 18))">under construct
-<span style="color: hsl(0, 0%, 100%, calc(2 / 18))">on</span> <span style="color: hsl(0, 0%, 100%, calc(16 / 18))">under constructi
-<span style="color: hsl(0, 0%, 100%, calc(1 / 18))">n</span> <span style="color: hsl(0, 0%, 100%, calc(17 / 18))">under constructio
- <a href="/">under construction</a>
-</pre>
-<pre>this page doesn't exist
-...how did you get here
-</pre>
+    <body>
+        <div class="main">
+        <div style="border-right: solid 2px; padding-right: 16px">
+            <img src="walking.gif" alt="walking cube">
+        </div>
+        <div style="margin-top: -2px">
+            this page doesn't exist<br>
+            how did you get here<br>
+            <a href="/website/">back to index</a>
+        </div>
+    </div>
 </body>
 </html>
