--- a/blender/icossymetry/index.html
+++ b/blender/icossymetry/index.html
@@ -11,8 +11,9 @@
         <link rel="icon" type="image/x-icon" href="/website/blender/cube.gif">
         <title>blender/icossymetry</title></head>
 
-    <body><div class="main"><h1>icossymetry</h1></div>
-        <div class="top"><a href="#">back to top</a> <span style="color: var(--shadow)">—————</span> <a href="../">go back</a></div>
+        <body><header>
+            <h1>icossymetry</h1></header>
+            <nav><a href="#">back to top</a> <span style="color: var(--shadow)">—————</span> <a href="../">back to blender</a></nav>
         <div class="main">
         <p>This whole thing started when i wanted to recreate the floor pattern in this iconic maths video, 
         <a href="https://www.youtube.com/watch?v=4aN6vX7qXPQ">Not Knot</a> by the Geometry Center.
@@ -21,7 +22,7 @@
         The idea was to make <a href="https://en.wikipedia.org/wiki/Icosahedral_symmetry">the icosahedron's symmetry group</a> 
         out of circle beziers, give them thickness then 
         <a href="https://en.wikipedia.org/wiki/Stereographic_projection">project</a> 
-        their shadow onto a plane below it all.</p>
+        their cool shadow onto a plane below it all.</p>
         <br>
 
         <div class="image"><img src="icosymmetry1.jpg">
