--- a/blender/index.html
+++ b/blender/index.html
@@ -12,8 +12,9 @@
         <title>stuff made in blender</title><style>
             h3{font-size: 1.5rem; margin: 16px 0}
         </style></head>
-    <body><div class="main"><h1>stuff made in blender</h1></div>
-    <div class="top"><a href="../">go back</a></div>
+        <body><header>
+            <h1>stuff made in blender</h1></header>
+            <nav><a href="../">go back</a></nav>
     <div class="main"><p>
         Hi! These are (most) of the things i've done in blender over the last while.<br>
         The original files are 1920x1080 (bigger even than my own display lol), so they're 400x225 to save your precious bandwidth at least a little bit.<br>
