--- a/bookmarks.html
+++ b/bookmarks.html
@@ -15,9 +15,9 @@
             h2{font-size:1.75rem; margin-bottom: 8px}
         </style></head>
 
-    <body><div class="main">
-        <h1>a lot of bookmarks</h1></div>
-        <div class="top"><a href="#">back to top</a> <span style="color: var(--shadow)">—————</span> <a href="./">go back</a></div>
+    <body><header>
+        <h1>a lot of bookmarks</h1></header>
+        <nav><a href="#">back to top</a> <span style="color: var(--shadow)">—————</span> <a href="./">go back</a></nav>
     <div class="main">
         <p>These are a bunch of bookmarks i've collected with raindrop.io, automatically updating! (<s>if i remember to add to them arrghh</s>)<br>
         </p>
