--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             .info{padding: 12px 24px 0; width: 400px;
                 border-right: solid var(--color) 2px}
             .info details{padding-bottom: 8px; margin-bottom: 8px}
-            .summary{padding: 0 24px; margin: 48px; font-size: 2rem}
+            .pages{padding: 0 24px; margin: 48px; font-size: 2rem}
 
-            .summary a{padding: 8px 16px; border: solid 2px var(--shadow); margin: 8px 4px; display: inline-block;
+            .pages a{padding: 8px 16px; border: solid 2px var(--shadow); margin: 8px 4px; display: inline-block;
             text-decoration: none}
             .info{width:400px}
 
@@ -59,7 +59,7 @@
                     width: auto;
                     border-bottom: solid var(--color) 2px; margin-bottom: 12px}
                 h1{font-size: min(3.5rem, 15vw); margin-bottom: 0; border-bottom: none}
-                .summary{margin: 12px 24px 48px; padding: 0; width: auto;}
+                .pages{margin: 12px 24px 48px; padding: 0; width: auto;}
                 }
 
         </style></head>
@@ -72,7 +72,7 @@
             If you wanna talk to us, our contacts are below! I'll just... put this blinky here
         </p><br>
         <img src="underconstruction.gif" alt="under construction"><br><br>
-        <details><summary>places i am in</summary>
+        <details id="links"><summary>places i am in</summary>
             <a href="https://discord.com/users/691348576093077535" class="discord">discord</a>
             <a href="https://bandcamp.com/cvni1981" class="bandcamp">bandcamp</a>
             <a href="https://open.spotify.com/user/1tqpqbcrw16yda1b4kc4nuu92" class="spotify">spotify</a>
@@ -83,16 +83,12 @@
         
     </div>
 
-    <div class="summary">
-
+    <div class="pages">
         <a href="bookmarks" class="bookmarks" title="(cool websites i've collected)">bookmarks</a><br>
         <a href="blender" class="normal" title="(stuff made in blender)">blender</a><br>
         <a href="buttons" class="buttons" title="(other folks' sites)">buttons</a>
         <a href="misc" class="misc" title="(ellaneous)">misc</a>
         <a href="sitelog" class="sitelog" title="(what's changed)">sitelog</a>
-
-        <br><p class="hover"> </p>
-
     </div>
 
 </body>
