--- a/mante.html
+++ b/mante.html
@@ -19,24 +19,33 @@
         .name::selection{background-color: #5dcbfc}
         .tab:hover{background-color: #14052b; color: #23f3ad}
         </style></head>
-    <body><div class="main"><h1>every ma ante server name*</h1></div>
-    <div class="top"><a href="#">back to top</a></div>
+    <body><header>
+        <h1>every ma ante server name*</h1></header>
+        <nav><a href="#">back to top</a></nav>
     <div class="main">
-        <details><summary><b>notes</b></summary>
+        <details id="notes"><summary><b>notes</b></summary>
             <p>These are only the names present in the audit log; there might be other names before june 4th.<br>
                 Also this is accurate to [as long as i can keep updating this]<br>
                 I don't know why there are 2 🦗 at the start of the july 11 ones, but i can't fix it; probably some RTL thing<br><br>
                 (name changer) leaderboard:
                 <ul>
-                    <li><b>kulupu ko:</b> 53 changes</li>
-                    <li><b>The Planet Mercury:</b> 40 changes</li>
-                    <li><b>the motan:</b> 39 changes</li>
+                    <li><b>kulupu ko:</b> 57 changes</li>
+                    <li><b>The Planet Mercury:</b> 42 changes</li>
+                    <li><b>the motan:</b> 40 changes</li>
                     <li><b>kala Asi:</b> 8 changes</li>
-                    <li><b>jan Seli:</b> 4 changes</li>
+                    <li><b>jan Seli:</b> 5 changes</li>
                 </ul><br>
                 tan mute ante
         </details>
-        <ul>
+        <ul id="name list">
+            <li>august 16:<b> homestuck </b><span class="name">jan Seli</span></li><br>
+            <li>august 16:<b> left libertarianism </b><span class="name">kulupu ko</span></li><br>
+            <li>august 15:<b> teen daycare </b><span class="name">kulupu ko</span></li><br>
+            <li>august 12:<b> ma ante pi ijo ante </b><span class="name">kulupu ko</span></li><br>
+            <li>august 12:<b> ma pi commitment to the bit </b><span class="name">The Planet Mercury</span></li><br>
+            <li>august 12:<b> ma pi commitment to the but </b><span class="name">The Planet Mercury</span></li><br>
+            <li>august 11:<b> ma ante pi ijo ante again </b><span class="name">the motan</span></li><br>
+            <li>august 11:<b> ma ante pi ijo ante </b><span class="name">kulupu ko</span></li><br>
             <li>august 9:<b> straights /tf2 </b><span class="name">the motan</span></li><br>
             <li>august 9:<b> straights <span style="cursor:help" title="three fourths joke">/tfj</span> </b><span class="name">The Planet Mercury</span></li><br>
             <li>august 9:<b> manure guys </b><span class="name">kala Asi</span></li><br>
