--- a/misc/folder/other/toki-pona/1/index.html
+++ b/misc/folder/other/toki-pona/1/index.html
@@ -11,8 +11,9 @@
             .v{text-decoration:underline dashed; color: var(--color)}
             .o{text-decoration:underline double; color: #01ca92}
         </style></head>
-    <div class="main"><h1>sentence structure</h1></div>
-    <div class="top"><a href="#">back to top</a> <span style="color: var(--shadow)">—————</span> <a href="../">go back</a></div>
+        <body><header>
+            <h1>sentence structure</h1></header>
+            <nav><a href="#">back to top</a> <span style="color: var(--shadow)">—————</span> <a href="../">go back</a></nav>
     <div class="main">
         <p>Let's begin with the basics: <b>sentence structure</b>.<br>
             toki pona, like most other languages, have 3 main blocks to its sentences:
@@ -26,8 +27,8 @@
             A person is doing the eating, so they are the <b class="s">subject</b>;<br>
             the action is eating so that's the <b class="v">verb</b>;<br>
             and the pear is what's being eaten, so it's the <b class="o">object</b>!</p>
-        <div class="p">
-            <div class="la"><b class="s">A person</b> <b class="v">ate</b> <b class="o">a pear</b>.</div>
+        <div class="phrase">
+            <div class="latin"><b class="s">A person</b> <b class="v">ate</b> <b class="o">a pear</b>.</div>
         </div><p>
             In English, the form and order of words indicates which is 
             <b class="s">subject</b>, <b class="v">verb</b> or <b class="o">object</b>.
@@ -35,104 +36,104 @@
             toki pona also uses <b class="s">S</b><b class="v">V</b><b class="o">O</b>
             as its word order, but just that isn't enough to differentiate them. For that, toki pona
             uses <b>particles</b> to indicate where one block ends and another begins:</p>
-        <div class="p">
-            <div class="la">li</div>
-            <div class="sp">li</div>
-            <div class="m">[start of predicate]</div>
+        <div class="phrase">
+            <div class="latin">li</div>
+            <div class="sitelen-pona">li</div>
+            <div class="meaning">[start of predicate]</div>
         </div>
-        <div class="p">
-            <div class="la">e</div>
-            <div class="sp">e</div>
-            <div class="m">[start of object]</div>
+        <div class="phrase">
+            <div class="latin">e</div>
+            <div class="sitelen-pona">e</div>
+            <div class="meaning">[start of object]</div>
         </div><p>
             Let's translate the English example into toki pona. Using the particles,
             "A person ate a pear" loosely becomes:
         </p>
         
-        <div class="p">
-            <div class="la" style="color: var(--text)">
+        <div class="phrase">
+            <div class="latin" style="color: var(--text)">
                 <b class="s">jan</b> li <b class="v">moku</b> e <b class="o">kili</b></div>
-            <div class="sp"><b class="s">jan</b> li <b class="v">moku</b> e <b class="o">kili</b></div>
-            <div class="m">person eats fruit</div>
+            <div class="sitelen-pona"><b class="s">jan</b> li <b class="v">moku</b> e <b class="o">kili</b></div>
+            <div class="meaning">person eats fruit</div>
         </div>
-        <div class="p">
-            <div class="la" style="color: var(--text)">
+        <div class="phrase">
+            <div class="latin" style="color: var(--text)">
                 <b class="s">soweli</b> li <b class="v">musi</b></div>
-            <div class="sp"><b class="s">soweli</b> li <b class="v">musi</b></div>
-            <div class="m">animal is fun/playing</div>
+            <div class="sitelen-pona"><b class="s">soweli</b> li <b class="v">musi</b></div>
+            <div class="meaning">animal is fun/playing</div>
         </div><p>
             If the subject is <b class="s">mi or sina</b>, however, the particle is dropped:</p>
-        <div class="p">
-        <div class="la" style="color: var(--text)">
+        <div class="phrase">
+        <div class="latin" style="color: var(--text)">
             <b class="s">sina</b> <b class="v">kute</b> e <b class="o">mi</b></div>
-            <div class="sp"><b class="s">sina</b> <b class="v">kute</b> e <b class="o">mi</b></div>
-            <div class="m">you listen to me</div>
+            <div class="sitelen-pona"><b class="s">sina</b> <b class="v">kute</b> e <b class="o">mi</b></div>
+            <div class="meaning">you listen to me</div>
         </div><p>
             If the sentence is an order <b>(imperative mood)</b> or a request <b>(optative mood)</b>, 
             or you want to adress someone <b>(vocative case)</b>, then li becomes another particle, o:</p>
-        <div class="p">
-            <div class="la">o</div>
-            <div class="sp">o</div>
-            <div class="m">[start of predicate | imperative/optative/vocative]</div>
+        <div class="phrase">
+            <div class="latin">o</div>
+            <div class="sitelen-pona">o</div>
+            <div class="meaning">[start of predicate | imperative/optative/vocative]</div>
         </div>
-        <div class="p">
-            <div class="la" style="color: var(--text)">
+        <div class="phrase">
+            <div class="latin" style="color: var(--text)">
                 <b class="s">jan</b> o <b class="v">olin</b></div>
-            <div class="sp"><b class="s">jan</b> o <b class="v">olin</b></div>
-            <div class="m">people must love/respect</div>
+            <div class="sitelen-pona"><b class="s">jan</b> o <b class="v">olin</b></div>
+            <div class="meaning">people must love/respect</div>
         </div>
-        <div class="p">
-            <div class="la" style="color: var(--text)">
+        <div class="phrase">
+            <div class="latin" style="color: var(--text)">
                 <b class="s">jan Atu</b> o</div>
-            <div class="sp"><b class="s">jan [a tu]</b> o</div>
-            <div class="m">(Hey) Arthur!</div>
+            <div class="sitelen-pona"><b class="s">jan [a tu]</b> o</div>
+            <div class="meaning">(Hey) Arthur!</div>
         </div><p>If the subject is <b class="s">sina</b>, it can be dropped:</p>
-        <div class="p">
-            <div class="la" style="color: var(--text)">
+        <div class="phrase">
+            <div class="latin" style="color: var(--text)">
                 o <b class="v">moku</b> e <b class="o">kili</b></div>
-            <div class="sp">o <b class="v">moku</b> e <b class="o">kili</b></div>
-            <div class="m">(you) eat fruit!</div>
+            <div class="sitelen-pona">o <b class="v">moku</b> e <b class="o">kili</b></div>
+            <div class="meaning">(you) eat fruit!</div>
         </div><p>
             If you want to have multiple <b class="s">subjects</b>, <b class="v">predicates</b> or 
             <b class="o">objects</b>, you must <b>repeat the particle that indicates it</b>.
             For <b class="s">subjects</b> there is another particle:
         </p>
-        <div class="p">
-            <div class="la">en</div>
-            <div class="sp">en</div>
-            <div class="m">[start of new subject]</div>
+        <div class="phrase">
+            <div class="latin">en</div>
+            <div class="sitelen-pona">en</div>
+            <div class="meaning">[start of new subject]</div>
         </div>
-        <div class="p">
-            <div class="la" style="color: var(--text)">
+        <div class="phrase">
+            <div class="latin" style="color: var(--text)">
                 <b class="s">soweli</b> li <b class="v">suwi</b> li <b class="v">musi</b></div><br>
-            <div class="sp"><b class="s">soweli</b> li <b class="v">suwi</b> li <b class="v">musi</b></div>
-            <div class="m">animals are cute and fun</div>
+            <div class="sitelen-pona"><b class="s">soweli</b> li <b class="v">suwi</b> li <b class="v">musi</b></div>
+            <div class="meaning">animals are cute and fun</div>
         </div>
-        <div class="p">
-            <div class="la" style="color: var(--text)">
+        <div class="phrase">
+            <div class="latin" style="color: var(--text)">
                 <b class="s">mi</b> <b class="v">pali</b> e <b class="o">ilo</b> e <b class="o">lipu</b></div><br>
-            <div class="sp"><b class="s">mi</b> <b class="v">pali</b> e <b class="o">ilo</b> e <b class="o">lipu</b></div>
-            <div class="m">I make tools and books</div>
+            <div class="sitelen-pona"><b class="s">mi</b> <b class="v">pali</b> e <b class="o">ilo</b> e <b class="o">lipu</b></div>
+            <div class="meaning">I make tools and books</div>
         </div>
-        <div class="p">
-            <div class="la" style="color: var(--text)">
+        <div class="phrase">
+            <div class="latin" style="color: var(--text)">
                 <b class="s">moku</b> en <b class="s">musi</b> en <b class="s">pali</b> li <b class="o">pona</b></div><br>
-            <div class="sp"><b class="s">moku</b> en <b class="s">musi</b> en <b class="s">pali</b> li <b class="v">pona</b></div>
-            <div class="m">eating, playing and working are good</div>
+            <div class="sitelen-pona"><b class="s">moku</b> en <b class="s">musi</b> en <b class="s">pali</b> li <b class="v">pona</b></div>
+            <div class="meaning">eating, playing and working are good</div>
         </div><p>
             However, ambiguity can happen with multiple <b class="s">subjects</b>/<b class="v">predicates</b>/<b class="o">objects</b>
             that can be avoided with better phrasing:
         </p>
-        <div class="p">
-            <div class="la" style="color: var(--text)">
+        <div class="phrase">
+            <div class="latin" style="color: var(--text)">
                 <b class="s">ona</b> li <b class="v">moku</b> li <b class="v">pana</b> e <b class="o">kili</b> e <b class="o">kalama</b></div><br>
-            <div class="sp"><b class="s">ona</b> li <b class="v">moku</b> li <b class="v">pana</b> e <b class="o">kili</b> e <b class="o">kalama</b></div>
-            <div class="m">they eat and give fruit and noises</div>
+            <div class="sitelen-pona"><b class="s">ona</b> li <b class="v">moku</b> li <b class="v">pana</b> e <b class="o">kili</b> e <b class="o">kalama</b></div>
+            <div class="meaning">they eat and give fruit and noises</div>
         </div>
-        <div class="p">
-            <div class="la" style="color: var(--text)">
+        <div class="phrase">
+            <div class="latin" style="color: var(--text)">
                 <b class="s">ona</b> li <b class="v">moku</b> e <b class="o">kili</b> li <b class="v">pana</b> e <b class="o">kalama</b></div><br>
-            <div class="sp"><b class="s">ona</b> li <b class="v">moku</b> e <b class="o">kili</b> li <b class="v">pana</b> e <b class="o">kalama</b></div>
-            <div class="m">they eat fruit and give noises</div>
+            <div class="sitelen-pona"><b class="s">ona</b> li <b class="v">moku</b> e <b class="o">kili</b> li <b class="v">pana</b> e <b class="o">kalama</b></div>
+            <div class="meaning">they eat fruit and give noises</div>
     </div></body>
 </html>
