--- a/misc/folder/other/toki-pona/index.html
+++ b/misc/folder/other/toki-pona/index.html
@@ -8,8 +8,9 @@
         <link href="style.css" rel="stylesheet" type="text/css" media="all">
         <title>toki pona</title><style>
         </style></head>
-    <div class="main"><h1>lipu sona mi pi toki pona</h1></div>
-    <div class="top">[go back]</div>
+    <body><header>
+        <h1>sona sitelen pi toki pona</h1></header>
+        <nav id="not working">[go back]</nav>
     <div class="main">
         <details><summary>about</summary><p>
             Hi! This project aims to showcase the structural grammar of toki pona (how words are 
