--- a/misc/journal.html
+++ b/misc/journal.html
@@ -15,10 +15,10 @@
             .entry h2{margin: 0 0 8px; font-size: 1.75rem}
 
         </style></head>
-    <body><div class="main"><h1>journal</h1></div>
-        <div class="top"><a href="#">back to top</a> <span style="color: var(--shadow)">—————</span> <a href="./">go back</a></div>
+    <body><header>
+        <h1>journal</h1></header>
+        <nav><a href="#">back to top</a> <span style="color: var(--shadow)">—————</span> <a href="./">back to misc</a></nav>
     <div class="main">
-
 
     <p>You gingerly open the notebook, looking out for anyone that calls you out. No one did.</p>
 
