--- a/misc/wall.html
+++ b/misc/wall.html
@@ -27,8 +27,9 @@
             #notes{grid-template-columns: auto}}
 
         </style></head>
-    <body><div class="main"><h1>wall</h1></div>
-        <div class="top"><a href="#">back to top</a> <span style="color: var(--shadow)">—————</span> <a href="./">go back</a></div>
+    <body><header>
+        <h1>wall</h1></header>
+        <nav><a href="#">back to top</a> <span style="color: var(--shadow)">—————</span> <a href="./">back to misc</a></nav>
     <div class="main">
         <p>You look closer at the sticky notes on the wall.
         </p>
