--- a/buttons/index.html
+++ b/buttons/index.html
@@ -28,8 +28,9 @@
         .after{background: linear-gradient(90deg, var(--text) 0%, var(--shadow) 100%);
             flex: 1; margin-left: 8px; height: 1px} 
         </style></head>
-    <body><div class="main"><h1>buttons!</h1></div>
-    <div class="top"><a href="../">go back</a></div>
+        <body><header>
+            <h1>buttons</h1></header>
+            <nav><a href="../">go back</a></nav>
     <div class="main">
         <p>This is the place where we put buttons to other folks' sites, some friends of mine and others ones i found on status.cafe!
         <br>And a button of our own is coming soon to fit the new new new [...] style</p>
@@ -53,5 +54,5 @@
         <a href="https://status.cafe" class="button"><img src="https://status.cafe/assets/button.png" alt="Status Cafe"></a>
 
     </div><br>
-    <iframe src="https://john.citrons.xyz/embed?ref=example.com" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;"></iframe></div></body>
+    <iframe name="johnvertisement" src="https://john.citrons.xyz/embed?ref=example.com" style="margin-left:auto;display:block;margin-right:auto;max-width:732px;width:100%;height:94px;border:none;"></iframe></div></body>
 </html>
