--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
 
             .normal:hover{background-color: #f0f0f010; border-color: #f0f0f0}
             .bookmarks:hover{background-color: #0d0542; color: #ffb135; border-color: #ffb135;}
+            .doodles:hover{background-color: #f0f0f0; color: #080808; border-color: #808080;}
+            .sitelog:hover{background-color: #ffa90010; color: #ffa900; border-color: #ffa900;}
             .buttons:hover{background-color: #b8cadf; color: #001a40; border-color: #0b458e;}
             .misc:hover{background-color: #15c40510; color: #f0f0f0; border-color: #15c405;}
             .sitelog:hover{background-color: #ffa90010; color: #ffa900; border-color: #ffa900;}
@@ -85,6 +87,7 @@
 
     <div class="pages">
         <a href="bookmarks" class="bookmarks" title="(cool websites i've collected)">bookmarks</a><br>
+        <a href="doodles" class="doodles" title="(stuff i've drawn)">doodles</a>
         <a href="blender" class="normal" title="(stuff made in blender)">blender</a><br>
         <a href="buttons" class="buttons" title="(other folks' sites)">buttons</a>
         <a href="misc" class="misc" title="(ellaneous)">misc</a>
