why doesn't the hover work?

--- a/doodles/index.html
+++ b/doodles/index.html
@@ -12,11 +12,11 @@
             --text: #080808;
             --color: #808080;
         font-family: 'Lora', serif}
-        #notebooks a{padding: 8px 16px; border: solid 2px var(--text); margin: 8px 4px; display: inline-block;
-    text-decoration: none};
-#notebooks a:hover {
-  background-color: var(--color);
-  color: var(--text);}
+        h2 a{padding: 8px 16px; border: solid 2px var(--text); margin: 8px 4px; display: inline-block;
+        text-decoration: none};
+        h2 a:hover {
+        background-color: var(--color);
+        color: var(--text);}
         </style></head>
         <body><header>
             <h1><img src="doodles.gif" alt="{doodles}"></h1></header>
