--- a/misc/journal.html
+++ b/misc/journal.html
@@ -35,7 +35,8 @@
             researching and realizing you don't do it that often to warrant a whole doodle.<br>
             I think from now on, in my regular doodles i'll fill in some with a darker skin color;
             Should i? I can't be colorblind. Shut up and draw. Attently, carefully.
-            If you have anything to say about them, i implore you to. With fervor if necessary. 
+            If you have anything to say about them, i implore you to. With fervor if necessary.<br>
+            Tell me i suck at being an ally.
             DM me through <a href="https://discord.com/users/691348576093077535" class="discord">discord</a>.<br>
             """"...just draw, Mardock!""""
         </p></div>
