--- a/doodles/15/index.html
+++ b/doodles/15/index.html
@@ -22,7 +22,9 @@
             <h1>15</h1></header>
             <nav><a href="#">back to top</a> <span style="color: var(--shadow)">—————</span> <a href="../">back to doodles</a></nav>
     <div class="main">
-
+        <p>The notebook i've used (am using) while learning about anti-racism;
+            started drawing more black faces, and meaning between the lines.
+        </p>
     <div id="images">
         <img src="0.png">
         <p>electricity pole, pointy closed/open hands,
