--- a/doodles/index.html
+++ b/doodles/index.html
@@ -13,7 +13,7 @@
             --color: #808080;
         font-family: 'Lora', serif}
         h2 a{padding: 8px 16px; border: solid 2px var(--text); margin: 8px 4px; display: inline-block;
-        text-decoration: none};
+        text-decoration: none}
         h2 a:hover {
         background-color: var(--color);
         color: var(--text);}
