--- a/misc/folder/other/toki-pona/index.html
+++ b/misc/folder/other/toki-pona/index.html
@@ -21,7 +21,7 @@
             <a href="https://lipamanka.gay/essays/dictionary">lipamanka's semantic space dictionary</a>
             for detailed analyses, and <a href="https://linku.la/">lipu Linku</a> for words that
             aren't in the dictionary or uncommon words/nimisin.<br>
-            <span class="sp">mute ante li pali e lipu-ni e sitelen· sitelen-pona la lipamanka li pali e 
+            <span class="sitelen-pona">mute ante li pali e lipu-ni e sitelen· sitelen-pona la lipamanka li pali e 
                 <a href="https://lipamanka.gay/linjamanka">nasin+sitelen</a></span></p></details>
         <ol>
             <li><h2><a href="1">sentence structure</a></h2></li>
