--- a/misc/folder/other/toki-pona/1/index.html
+++ b/misc/folder/other/toki-pona/1/index.html
@@ -8,8 +8,8 @@
         <link href="../style.css" rel="stylesheet" type="text/css" media="all">
         <title>sentence structure</title><style>
             .s{text-decoration:underline; color: #ff256d}
-            .v{text-decoration:underline dashed; color: var(--color)}
-            .o{text-decoration:underline double; color: #01ca92}
+            .v{text-decoration:underline double; color: var(--color)}
+            .o{text-decoration:underline dashed; color: #01ca92}
             .image{display:flex; flex-direction: row-reverse; justify-content: space-between; 
                 align-items: flex-start}
             @media screen and (max-width: 550px){
