--- a/misc/folder/other/toki-pona/1/index.html
+++ b/misc/folder/other/toki-pona/1/index.html
@@ -10,6 +10,9 @@
             .s{text-decoration:underline; color: #ff256d}
             .v{text-decoration:underline double; color: var(--color)}
             .o{text-decoration:underline dashed; color: #01ca92}
+            .phrase .latin .s, .phrase .latin .v, .phrase .latin .o{
+                text-decoration:none; border: solid 2px; border-radius: 4px;
+                padding: 0 8px}
             .phrase .latin .s{background-color: #ff256d10}
             .phrase .latin .v{background-color: #ffbb3910; border-style: double}
             .phrase .latin .o{background-color: #01ca9210; border-style: dotted}
