--- a/misc/folder/other/toki-pona/1/index.html
+++ b/misc/folder/other/toki-pona/1/index.html
@@ -14,7 +14,7 @@
                 text-decoration:none; border: solid 2px; border-radius: 4px;
                 padding: 0 8px}
             .phrase .latin .s{background-color: #ff256d10}
-            .phrase .latin .v{background-color: #ffbb3910; border-style: double}
+            .phrase .latin .v{background-color: #ffbb3910; border-style: double; border-width: 4px;}
             .phrase .latin .o{background-color: #01ca9210; border-style: dotted}
             .image{display:flex; flex-direction: row-reverse; justify-content: space-between; 
                 align-items: flex-start}
