--- a/misc/folder/other/toki-pona/1/index.html
+++ b/misc/folder/other/toki-pona/1/index.html
@@ -7,9 +7,9 @@
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="../style.css" rel="stylesheet" type="text/css" media="all">
         <title>sentence structure</title><style>
-            .s{text-decoration:underline; color: #ff256d}
-            .v{text-decoration:underline double; color: var(--color)}
-            .o{text-decoration:underline dashed; color: #01ca92}
+            .s{border-bottom: solid; color: #ff256d}
+            .v{border-bottom: double; color: var(--color)}
+            .o{border-bottom: dashed; color: #01ca92}
             .phrase .latin .s, .phrase .latin .v, .phrase .latin .o{
                 text-decoration:none; border: solid 2px; border-radius: 4px;
                 padding: 0 8px}
