--- a/misc/folder/other/toki-pona/1/index.html
+++ b/misc/folder/other/toki-pona/1/index.html
@@ -7,14 +7,14 @@
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="../style.css" rel="stylesheet" type="text/css" media="all">
         <title>sentence structure</title><style>
-            .s{border-bottom: solid 1px; color: #ff256d}
-            .v{border-bottom: double 2px ; color: var(--color)}
-            .o{border-bottom: dashed 1px; color: #01ca92}
+            .s{text-decoration:underline; color: #ff256d; text-decoration-skip-ink: none;}
+            .v{text-decoration:underline double; color: var(--color); text-decoration-skip-ink: none;}
+            .o{text-decoration:underline dashed; color: #01ca92; text-decoration-skip-ink: none;}
             .phrase .latin .s, .phrase .latin .v, .phrase .latin .o{
-                text-decoration:none; border: solid 2px; border-radius: 4px;
+                text-decoration:none; border: solid 1px; border-radius: 4px;
                 padding: 0 8px}
             .phrase .latin .s{background-color: #ff256d10}
-            .phrase .latin .v{background-color: #ffbb3910; border-style: double; border-width: 4px;}
+            .phrase .latin .v{background-color: #ffbb3910; border-style: double}
             .phrase .latin .o{background-color: #01ca9210; border-style: dotted}
             .image{display:flex; flex-direction: row-reverse; justify-content: space-between; 
                 align-items: flex-start}
